--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         async function initializeLIFF() {
             try {
-                await liff.init({ liffId: '2008892615-G3ij6thY' }); // 替換為新的LIFF ID
+                await liff.init({ liffId: '2009006016-kLDzIOk6' }); // 替換為新的LIFF ID
                 if (!liff.isLoggedIn()) {
                     liff.login();
                 } else {
